--- a/app/src/main/res/menu/stop_details_destination_menu.xml
+++ b/app/src/main/res/menu/stop_details_destination_menu.xml
@@ -10,7 +10,7 @@
 
     <item
             android:id="@+id/item_refresh"
-            android:icon="@drawable/ic_refresh_on_primary_24dp"
+            android:icon="@drawable/avd_refresh"
             android:title="@string/refresh_menu_item"
             app:showAsAction="ifRoom"/>
 </menu>
