--- a/app/src/main/res/layout/map_destination.xml
+++ b/app/src/main/res/layout/map_destination.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/map_appBar"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
 
