--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -1,79 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="wrap_content"
+        android:id="@+id/map_info_window_layout"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:maxWidth="300dp">
 
     <ImageView
+            android:id="@+id/map_info_window_type_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:id="@+id/type_image_info_window"
-            android:contentDescription="@string/stop_type"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="4dp"
+            android:contentDescription="@string/stop_type"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/title_text_info_window"
-            android:textColor="@color/kinda_black"
+            android:id="@+id/map_info_window_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="6dp"
+            android:layout_marginBottom="4dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
             android:maxWidth="230dp"
             android:maxLines="2"
-            android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAppearance="@android:style/TextAppearance.Material.Title"
-            android:gravity="center_horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/favorite_row_lines_layout"
             android:textAlignment="center"
-            android:layout_marginStart="4dp"
-            />
+            android:textAppearance="@android:style/TextAppearance.Material.Title"
+            android:textColor="@color/kinda_black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/map_info_window_lines_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/map_info_window_type_image"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <GridLayout
-            android:orientation="horizontal"
-            android:columnCount="4"
+            android:id="@+id/map_info_window_lines_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
-            android:id="@+id/favorite_row_lines_layout"
-            android:gravity="start"
-            android:layout_marginEnd="4dp"
-            app:layout_constraintEnd_toStartOf="@+id/number_text_info_window"
             android:layout_marginStart="64dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="0dp"
+            android:columnCount="4"
+            android:gravity="start"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/map_info_window_number"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintHorizontal_weight="1"
-            >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/map_info_window_title">
 
     </GridLayout>
 
     <TextView
-            android:textColor="@color/kinda_black"
+            android:id="@+id/map_info_window_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/number_text_info_window"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_text_info_window"
             android:layout_marginEnd="8dp"
-            android:textAlignment="textEnd"
-            app:layout_constraintStart_toEndOf="@+id/favorite_row_lines_layout"
             android:layout_marginBottom="0dp"
+            android:textAlignment="textEnd"
+            android:textColor="@color/kinda_black"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_weight="0"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_weight="0"
+            app:layout_constraintStart_toEndOf="@+id/map_info_window_lines_layout"
+            app:layout_constraintTop_toBottomOf="@id/map_info_window_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
