Added transition into stop details from line, fixed selectedItemId getting stuck when coming from stop into line, temporarily removed popUpTo on all navGraphs because it doesn't work properly with shared element transitions (pops before the transition actually happens), minor cleanup

--- a/app/src/main/res/navigation/favorites_destination.xml
+++ b/app/src/main/res/navigation/favorites_destination.xml
@@ -26,9 +26,7 @@
                 app:argType="string" />
         <action
                 android:id="@+id/action_stopDetails_to_lineDetails"
-                app:destination="@id/lineDetails"
-                app:popUpTo="@+id/lineDetails"
-                app:popUpToInclusive="true" />
+                app:destination="@id/lineDetails"/>
     </fragment>
     <fragment
             android:id="@+id/lineDetails"
