Added transition animation when opening the line details screen, fixed and improved shared element transitions, minor cleanup

--- a/app/src/main/res/layout/destination_row.xml
+++ b/app/src/main/res/layout/destination_row.xml
@@ -4,6 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         style="@style/Widget.MaterialComponents.CardView"
+        android:id="@+id/destination_row_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -14,11 +15,21 @@
         tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/destination_row_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <com.jorkoh.transportezaragozakt.destinations.utils.MirrorView
+                android:id="@+id/destination_row_mirror_body"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
         <TextView
-                android:id="@+id/line_text"
+                android:id="@+id/destination_row_line_text"
                 android:layout_width="wrap_content"
                 android:layout_height="82dp"
                 android:layout_marginStart="8dp"
@@ -49,7 +60,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/first_time_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintStart_toEndOf="@+id/destination_row_line_text"
                 app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -62,7 +73,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/second_time_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintStart_toEndOf="@+id/destination_row_line_text"
                 app:layout_constraintTop_toBottomOf="@+id/destination_text" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -94,7 +105,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/line_text"
+                app:layout_constraintStart_toEndOf="@+id/destination_row_line_text"
                 app:layout_constraintTop_toBottomOf="@+id/first_time_text" />
 
         <androidx.appcompat.widget.AppCompatButton
