Moved StopDetails FAB from the main_container activity layout into the fragment layout to fix nested fragments not being displayed while the fragment transitions where in progress. Added custom Coordinator Layout behavior so the FAB keeps responding to the Snackbars now that it's no longer a direct child to the root Coordinator Layout

--- a/app/src/main/res/layout/map_fake_transition_background.xml
+++ b/app/src/main/res/layout/map_fake_transition_background.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatImageView
+<androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/map_fake_transition_background_image"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-</androidx.appcompat.widget.AppCompatImageView>
+        android:layout_height="match_parent" />
