--- a/app/src/main/res/layout/line_details_destination.xml
+++ b/app/src/main/res/layout/line_details_destination.xml
@@ -6,12 +6,14 @@
         android:id="@+id/line_details_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:transitionGroup="false"
         android:background="?android:colorBackground">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/line_details_coordinator_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:transitionGroup="false"
             tools:context="com.jorkoh.transportezaragozakt.destinations.line_details.LineDetailsFragment">
 
         <com.google.android.material.appbar.AppBarLayout
