--- a/app/src/main/res/layout/main_container.xml
+++ b/app/src/main/res/layout/main_container.xml
@@ -10,6 +10,7 @@
 
     <FrameLayout
             android:id="@+id/nav_host_container"
+            app:layout_behavior="com.jorkoh.transportezaragozakt.destinations.utils.NestedFabCoordinatorBehavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
@@ -29,14 +30,5 @@
             app:itemTextAppearanceActive="@style/BaseTheme.CustomBottomNavigationViewText"
             app:itemTextAppearanceInactive="@style/BaseTheme.CustomBottomNavigationViewText"
             app:menu="@menu/bottom_navigation_menu"/>
-
-    <com.leinardi.android.speeddial.SpeedDialView
-            android:id="@+id/stop_details_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            app:sdMainFabClosedSrc="@drawable/ic_add_black_24dp"
-            android:visibility="gone"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
