--- a/app/src/main/res/layout/stop_row.xml
+++ b/app/src/main/res/layout/stop_row.xml
@@ -36,6 +36,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/stop_row_mirror_toolbar" />
 
+        <com.jorkoh.transportezaragozakt.destinations.utils.MirrorView
+                android:id="@+id/stop_row_mirror_fab"
+                android:layout_width="1px"
+                android:layout_height="0dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
         <ImageView
                 android:id="@+id/stop_row_type_image"
                 android:layout_width="54dp"
